--- a/app/globals.scss
+++ b/app/globals.scss
@@ -19,6 +19,9 @@
   }
 }
 
+/*---Variables---*/
+$primary-color: #1e2939;
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -27,9 +30,12 @@ body {
 main{
   background: #ffffff;
 }
+header h1{
+  font-size: 3rem;
+  font-weight: 600;
+  color: $primary-color;
+}
 
-/*---Variables---*/
-$primary-color: #1e2939;
 
 .job-listing{
   width: 100%;
